# de-foundations

./: .gitignore  LICENSE  README.md  pyproject.toml
