[project]
name = "de-foundations"
version = "0.1.0"
description = "Foundations for transitioning from BI to Senior Data Engineer — PySpark, Delta Lake, lakehouse patterns."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
    { name = "Abhishek Vadlamudi" }
]
keywords = ["data-engineering", "pyspark", "delta-lake", "lakehouse", "databricks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Runtime dependencies — what the code needs to execute
dependencies = [
    "pyspark==3.5.3",
    "delta-spark==3.2.1",
    "pyarrow>=15.0.0,<18.0.0",
    "pandas>=2.2.0,<3.0.0",
]

[project.optional-dependencies]
# Development dependencies — linters, formatters, test runners
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
    "pre-commit>=3.8.0",
    "nbstripout>=0.7.0",
]

[project.urls]
Repository = "https://github.com/AbhishekVadlamudi/de-foundations"

# ============================================================
# Build system
# ============================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/de_foundations"]

# ============================================================
# uv configuration
# ============================================================
[tool.uv]
# Dev dependencies installed by default with `uv sync`
dev-dependencies = []

# ============================================================
# Ruff — linter + formatter (replaces black, flake8, isort)
# ============================================================
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "B",    # flake8-bugbear (likely bugs)
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade (modern Python idioms)
    "SIM",  # flake8-simplify
    "TID",  # tidy imports
    "RUF",  # ruff-specific rules
    "N",    # pep8-naming
    "PL",   # pylint
    "PTH",  # use pathlib over os.path
]
ignore = [
    "PLR0913",  # too many arguments — DE code often legitimately has many
    "E501",     # line too long — formatter handles this
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]  # magic numbers OK in tests
"notebooks/*" = ["E402"]  # imports not at top — common in notebooks

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================
# Mypy — static type checker
# ============================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# PySpark doesn't ship with complete type stubs; ignore its untyped surface
[[tool.mypy.overrides]]
module = ["pyspark.*", "delta.*"]
ignore_missing_imports = true

# ============================================================
# Pytest
# ============================================================
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=de_foundations",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/de_foundations"]
branch = true
